# sqlcoder

./: pyproject.toml
sqlcoder/: metadata.sql  playground.py  prompt.md
