[tool.poetry]
name = "sqlcoder"
version = "0.1.0"
description = ""
authors = ["styx0r <christoph.baldow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
transformers = "^4.37.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
accelerate = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
